# bit-demo

./: .gitignore  README.md  add_audio.py  add_styled_audio.py  bit_demo.py  embed_cover.py  pyproject.toml  requirements.txt
.claude/skills/video-generator/: SKILL.md  config.yaml  requirements.txt  video_generator.py
.claude/skills/video-generator/agents/: content_agent.py
.claude/skills/video-generator/pipeline/: executor.py
.claude/skills/video-generator/references/: animation-review.md  content-agent.md  manim-agent.md  pre-render-checks.md  script-review.md  visual-elements.md
doc/: audio.md  start.md
