[project]
name = "bit-demo"
version = "0.1.0"
description = "计算机中的 Bit - Manim 动画演示"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
